# modern-random

./: .gitignore  LICENSE  next.config.mjs  package.json  theme.ts
app/: layout.tsx  page.tsx
app/data/: layout.tsx  page.tsx
components/AppNavbar/: AppNavbar.tsx
components/ColorSchemeToggle/: ColorSchemeToggle.tsx
components/ImportWords/: ImportWords.tsx
model/: Config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/config/: command.rs  fs.rs  mod.rs  model.rs
src-tauri/src/generate/: command.rs  generate.rs  load.rs  mod.rs
src-tauri/src/words/: command.rs  csv.rs  fs.rs  mod.rs
