[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.8", features = [] }
bson = "2.9.0"
lazy_static = "1.4.0"
futures = "0.3.30"
serde-inline-default = "0.2.0"
moka = { version = "0.12.5", features = ["future"] }
tauri-plugin-os = "2.0.0-beta.1"
